--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,3 @@
 en:
-  label_group_permission_plural: Groups' permissions
+  label_group_permission_plural: Groups / Permissions
   permission_group_permissions_description: Read/write access to groups' permissions.
