--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,4 @@
 pt-BR:
-  label_group_permission_plural: Permissões de grupos
+  label_group_permission_plural: Grupos / Permissões
   permission_group_permissions_description: Visualização/modificação das 
     permissões de grupo.
